Configuration of the JPA Adapter for the Customer Model